[metadata]
name = caspase_model
description = Caspase model modified at Grecco Lab.
url = https://github.com/acorbat/caspase_model
author = Agustín Corbat
author_email = acorbat@df.uba.ar
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

[options]

[options.extras_require]
pysb = 
    pysb
    earm @ git+https://github.com/acorbat/earm

simbio =
    simbio
