[metadata]
name = caspase_model
description = Caspase model modified at Grecco Lab.
url = https://github.com/acorbat/caspase_model
author = Agustín Corbat
author_email = acorbat@df.uba.ar
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

[options]
packages = find:

[options.extras_require]
pysb = 
    pysb
    earm @ git+https://github.com/acorbat/earm

simbio =
    simbio

dev =
    pre-commit


[flake8]
# Black recommended
max-line-length = 88
extend-ignore = E203
# PySB
per-file-ignores =
    caspase_model/macros.py: F403 F405
    caspase_model/models.py: F403 F405
    caspase_model/modules.py: F403 F405
    caspase_model/shared.py: F403 F405
    caspase_model/tests/name_mapping.py: E501
